<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_dialog_quiz"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/change_pass"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/bg_text_dialog"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/dialogEdtOldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password_old"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/dark"
            />
        <EditText
            android:id="@+id/dialogEdtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_new"
            android:gravity="center"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="4dp"

            android:textColor="@color/dark"
            />
        <EditText
        android:id="@+id/dialogEdtPass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_new"
        android:gravity="center"
        android:inputType="textPassword"
        android:textSize="16sp"
            android:layout_marginTop="4dp"
        android:textColor="@color/dark"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >
            <Button
                android:id="@+id/btnChangePassCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_marginRight="8dp"
                android:textSize="14sp"
                android:alpha="0.8"
                app:backgroundTint="@null"
                android:background="@drawable/bg_button_dialog"
                />
            <Button
                android:id="@+id/btnChangePassOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:layout_marginLeft="8dp"
                android:textSize="14sp"
                android:background="@drawable/bg_button_dialog"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>